tests-integration/fixtures/checking/219_derive_newtype_not_constructor/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms

Types

Derived
derive Show (Int -> Int)

Diagnostics
error[CannotDeriveForType]: Cannot derive for type: Int -> Int
  --> 5:1..5:42
  |
5 | derive newtype instance Show (Int -> Int)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
